--- a/wcloud-app/src/index.css
+++ b/wcloud-app/src/index.css
@@ -95,3 +95,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+html, body, #root, .video-wordcloud-container {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden !important;
+  max-width: none !important;
+}
